Insert .env.example instructions

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # <- Pre-award environment ->
 # COPY TO .env then see README for details on how to obtain the values
-GOV_NOTIFY_API_KEY=
+GOV_NOTIFY_API_KEY=<INSERT-GOVUK-NOTIFY-API-KEY-FOR-ACCESS-FUNDING-SERVICE-IF-USING-PRE-AWARD>
 # <- Pre-award environment ->
 
 
 # <- Post-award environment ->
 CELERY_AUTO_REFRESH=true
-NOTIFY_API_KEY=
-NOTIFY_FIND_API_KEY=
+NOTIFY_API_KEY=<INSERT-GOVUK-NOTIFY-API-KEY-FOR-SUBMIT-MONITORING-DATA-SERVICE-IF-USING-POST-AWARD>
+NOTIFY_FIND_API_KEY=<INSERT-GOVUK-NOTIFY-API-KEY-FOR-FIND-MONITORING-DATA-SERVICE-IF-USING-POST-AWARD>
 # SENTRY_DSN_DATA_STORE=
 # SENTRY_DSN_DATA_FRONTEND=
 # SQLALCHEMY_ECHO=true
@@ -22,7 +22,7 @@ FSD_UTILS_ENABLE_CONFIG_TABLE=false
 WERKZEUG_DEBUG_PIN=off
 AUTO_BUILD_ASSETS=true
 
-AZURE_AD_CLIENT_ID=
-AZURE_AD_CLIENT_SECRET=
-AZURE_AD_TENANT_ID=
+AZURE_AD_CLIENT_ID=<INSERT-AZURE-AD-CREDS-FROM-DLUHC-FSD-1PASSWORD-IF-USING-AUTHENTICATOR>
+AZURE_AD_CLIENT_SECRET=<INSERT-AZURE-AD-CREDS-FROM-DLUHC-FSD-1PASSWORD-IF-USING-AUTHENTICATOR>
+AZURE_AD_TENANT_ID=<INSERT-AZURE-AD-CREDS-FROM-DLUHC-FSD-1PASSWORD-IF-USING-AUTHENTICATOR>
 # <- Shared environment ->
