--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     volumes:
       - './apps/funding-service-design-fund-application-builder:/app'
       - './certs:/app-certs'
-
+      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
     profiles: [ pre ]
     networks:
       default:
@@ -44,7 +44,9 @@ services:
     depends_on:
       database:
         condition: service_healthy
-    volumes: [ './apps/funding-service-design-fund-store:/app' ]
+    volumes:
+      - './apps/funding-service-design-fund-store:/app'
+      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
     profiles: [ pre ]
 
   application-store:
@@ -65,7 +67,9 @@ services:
         condition: service_healthy
       localstack:
         condition: service_started
-    volumes: [ './apps/funding-service-design-application-store:/app' ]
+    volumes:
+      - './apps/funding-service-design-application-store:/app'
+      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
     profiles: [ pre ]
 
   account-store:
@@ -75,7 +79,9 @@ services:
     environment:
       - FLASK_ENV=development
       - DATABASE_URL=postgresql://postgres:password@database:5432/account_store
-    volumes: [ './apps/funding-service-design-account-store:/app' ]
+    volumes:
+      - './apps/funding-service-design-account-store:/app'
+      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
     ports:
       - 3003:8080
       - 5683:5678
@@ -86,7 +92,9 @@ services:
   assessment-store:
     build:
       context: ./apps/funding-service-design-assessment-store
-    volumes: [ './apps/funding-service-design-assessment-store:/app' ]
+    volumes:
+      - './apps/funding-service-design-assessment-store:/app'
+      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
     command: [ "sh", "-c", "flask db upgrade && python -m debugpy --listen 0.0.0.0:5678 -m wsgi" ]
     ports:
       - 3005:8080
@@ -109,6 +117,7 @@ services:
     volumes:
       - './apps/funding-service-design-assessment:/app'
       - './certs:/app-certs'
+      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
     command: [ "sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080 --cert=/app-certs/cert.pem --key=/app-certs/key.pem" ]
     depends_on:
       - redis-data
@@ -140,6 +149,7 @@ services:
     volumes:
       - './apps/funding-service-design-frontend:/app'
       - './certs:/app-certs'
+      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
     command: [ "sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m flask run --no-debugger --host 0.0.0.0 --port 8080 --cert=/app-certs/cert.pem --key=/app-certs/key.pem" ]
     depends_on:
       - redis-data
@@ -208,6 +218,7 @@ services:
     volumes:
       - './apps/funding-service-design-authenticator:/app'
       - './certs:/app-certs'
+      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
     command: bash -c "python -m debugpy --listen 0.0.0.0:5678 -m flask run -p 8080 -h 0.0.0.0 --cert=/app-certs/cert.pem --key=/app-certs/key.pem"
     ports:
       - 3004:8080
@@ -237,7 +248,9 @@ services:
   notification:
     build:
       context: ./apps/funding-service-design-notification
-    volumes: [ './apps/funding-service-design-notification:/app' ]
+    volumes:
+      - './apps/funding-service-design-notification:/app'
+      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
     command: [ "sh", "-c", "python -m debugpy --listen 0.0.0.0:5678 -m wsgi" ]
     ports:
       - 3006:8080
@@ -256,8 +269,6 @@ services:
     # http://github.com/communitiesuk/funding-service-design-post-award-data-store
     build:
       context: ./apps/funding-service-design-post-award-data-store
-      args:
-        REQUIREMENTS: requirements-dev.txt
     command: >
       bash -c "
         flask db upgrade &&
@@ -268,6 +279,7 @@ services:
     volumes:
       - './apps/funding-service-design-post-award-data-store:/app'
       - './certs:/app-certs'
+      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
     stdin_open: true
     tty: true
     ports:
@@ -304,7 +316,9 @@ services:
       else
           celery -A app.celery_app worker --loglevel INFO;
       fi "
-    volumes: [ './apps/funding-service-design-post-award-data-store:/app' ]
+    volumes:
+      - './apps/funding-service-design-post-award-data-store:/app'
+      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
     depends_on:
       redis-data:
         condition: service_started
