--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 # <- Pre-award environment ->
-# COPY TO .env then see README for details on how to obtain the values
 GOV_NOTIFY_API_KEY=<INSERT-GOVUK-NOTIFY-API-KEY-FOR-ACCESS-FUNDING-SERVICE-IF-USING-PRE-AWARD>
 # <- Pre-award environment ->
 
@@ -8,9 +7,7 @@ GOV_NOTIFY_API_KEY=<INSERT-GOVUK-NOTIFY-API-KEY-FOR-ACCESS-FUNDING-SERVICE-IF-US
 CELERY_AUTO_REFRESH=true
 NOTIFY_API_KEY=<INSERT-GOVUK-NOTIFY-API-KEY-FOR-SUBMIT-MONITORING-DATA-SERVICE-IF-USING-POST-AWARD>
 NOTIFY_FIND_API_KEY=<INSERT-GOVUK-NOTIFY-API-KEY-FOR-FIND-MONITORING-DATA-SERVICE-IF-USING-POST-AWARD>
-# SENTRY_DSN_DATA_STORE=
-# SENTRY_DSN_DATA_FRONTEND=
-# SQLALCHEMY_ECHO=true
+SQLALCHEMY_ECHO=true
 ENABLE_TF_R6=true
 # <- Post-award environment ->
 
