--- a/.awslocal.env
+++ b/.awslocal.env
@@ -16,8 +16,8 @@ AWS_MSG_BUCKET_NAME=fsd-notification-bucket
 AWS_SQS_IMPORT_APP_QUEUE_NAME=import-queue.fifo
 AWS_DLQ_IMPORT_APP_QUEUE_NAME=import-dlq.fifo
 AWS_DLQ_MAX_RECEIVE_COUNT=3
-AWS_SQS_IMPORT_APP_PRIMARY_QUEUE_URL=http://localstack:4566/000000000000/import-queue.fifo
-AWS_SQS_IMPORT_APP_SECONDARY_QUEUE_URL=http://localstack:4566/000000000000/import-queue-dlq.fifo
+PRIMARY_QUEUE_URL=http://localstack:4566/000000000000/import-queue.fifo
+DEAD_LETTER_QUEUE_URL=http://localstack:4566/000000000000/import-queue-dlq.fifo
 
 # Notification queue variables
 AWS_SQS_NOTIFICATION_APP_QUEUE_NAME=notif-queue.fifo
