--- a/.awslocal.env
+++ b/.awslocal.env
@@ -18,6 +18,7 @@ AWS_DLQ_IMPORT_APP_QUEUE_NAME=import-dlq.fifo
 AWS_DLQ_MAX_RECEIVE_COUNT=3
 PRIMARY_QUEUE_URL=http://localstack:4566/000000000000/import-queue.fifo
 DEAD_LETTER_QUEUE_URL=http://localstack:4566/000000000000/import-queue-dlq.fifo
+SQS_RECEIVE_MESSAGE_CYCLE_TIME=3
 
 # Notification queue variables
 AWS_SQS_NOTIFICATION_APP_QUEUE_NAME=notif-queue.fifo
