Add pre-award-stores repo to docker runner
- Add new pre-award-stores container and databases
- Point FUND_STORE_API_HOST to pre-award-stores
- Add migration script to copy fund-store data to pre-award-stores
- Update existing scripts and vscode launch config

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -65,6 +65,21 @@
             ]
         },
         {
+            "name": "Docker Runner: Pre-Award Stores",
+            "type": "debugpy",
+            "request": "attach",
+            "connect": {
+                "host": "localhost",
+                "port": 5692
+            },
+            "pathMappings": [
+                {
+                    "localRoot": "${workspaceFolder}/apps/funding-service-pre-award-stores",
+                    "remoteRoot": "."
+                }
+            ]
+        },
+        {
             "name": "Docker Runner: Authenticator",
             "type": "debugpy",
             "request": "attach",
