Replace assessment-store with pre-award-stores

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,28 +48,6 @@ services:
       database:
         condition: service_healthy
 
-  assessment-store:
-    build:
-      context: ./apps/funding-service-design-assessment-store
-    volumes:
-      - './apps/funding-service-design-assessment-store:/app'
-      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
-    command: [ "sh", "-c", "flask db upgrade && python -m debugpy --listen 0.0.0.0:5678 -m wsgi" ]
-    ports:
-      - 3005:8080
-      - 5685:5678
-    environment:
-      - FLASK_ENV=development
-      - DATABASE_URL=postgresql://postgres:password@database:5432/assessment_store
-      - APPLICATION_STORE_API_HOST=http://pre-award-stores:8080/application
-    env_file: .awslocal.env
-    depends_on:
-      database:
-        condition: service_healthy
-      localstack:
-        condition: service_started
-    profiles: [ pre ]
-
   pre-award-stores:
     build:
       context: ./apps/funding-service-pre-award-stores
@@ -114,7 +92,7 @@ services:
       - FLASK_ENV=development
       - FUND_STORE_API_HOST=http://pre-award-stores:8080/fund
       - APPLICATION_STORE_API_HOST=http://pre-award-stores:8080/application
-      - ASSESSMENT_STORE_API_HOST=http://assessment-store:8080
+      - ASSESSMENT_STORE_API_HOST=http://pre-award-stores:8080/assessment
       - ACCOUNT_STORE_API_HOST=http://account-store:8080
       - AUTHENTICATOR_HOST=https://authenticator.levellingup.gov.localhost:3004
       - REDIS_INSTANCE_URI=redis://redis-data:6379
