--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,12 @@ services:
   account-store:
     build:
       context: ./apps/funding-service-design-account-store
-    command: [ "sh", "-c", "flask db upgrade && python -m debugpy --listen 0.0.0.0:5678 -m wsgi" ]
+    command:
+      bash -c "
+      flask db upgrade && \
+      python -m invoke seed-local-account-store && \
+      python -m debugpy --listen 0.0.0.0:5678 -m wsgi
+      "
     environment:
       - FLASK_ENV=development
       - DATABASE_URL=postgresql://postgres:password@database:5432/account_store
