--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,28 +33,6 @@ services:
         aliases:
           - fund-application-builder.levellingup.gov.localhost
 
-  account-store:
-    build:
-      context: ./apps/funding-service-design-account-store
-    command:
-      bash -c "
-      flask db upgrade && \
-      python -m invoke seed-local-account-store && \
-      python -m debugpy --listen 0.0.0.0:5678 -m wsgi
-      "
-    environment:
-      - FLASK_ENV=development
-      - DATABASE_URL=postgresql://postgres:password@database:5432/account_store
-    volumes:
-      - './apps/funding-service-design-account-store:/app'
-      - '/app/.venv' # Don't overwrite this directory with local .venv because uv links won't translate in the container
-    ports:
-      - 3003:8080
-      - 5683:5678
-    depends_on:
-      database:
-        condition: service_healthy
-
   pre-award-stores:
     build:
       context: ./apps/funding-service-pre-award-stores
@@ -63,7 +41,8 @@ services:
       flask db upgrade && \
       python -m fund_store.scripts.load_all_fund_rounds && \
       python -m fund_store.scripts.fund_round_loaders.load_fund_round_from_fab --fund_short_code CTDF && \
-      python -m invoke -r assessment_store seed-local-assessment-store-db && \
+      python -m invoke assessment.seed-local-assessment-store-db && \
+      python -m invoke account.seed-local-account-store && \
       python -m debugpy --listen 0.0.0.0:5678 -m wsgi
       "
     environment:
