--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - FORM_RUNNER_INTERNAL_HOST=http://form-runner.levellingup.gov.localhost:3009
       - FORM_RUNNER_EXTERNAL_HOST=http://form-runner.levellingup.gov.localhost:3009
       - DATABASE_URL=postgresql://postgres:password@database:5432/fab_store # pragma: allowlist secret
-      - FLASK_DEBUG=0
+      - FLASK_DEBUG=1
       - FLASK_ENV=development
       - SECRET_KEY=local
       - AUTHENTICATOR_HOST=https://authenticator.levellingup.gov.localhost:4004
@@ -40,7 +40,7 @@ services:
       bash -c "
       flask db upgrade && \
       python -m fund_store.scripts.load_all_fund_rounds && \
-      python -m fund_store.scripts.fund_round_loaders.load_fund_round_from_fab --fund_short_code CTDF && \
+      python -m fund_store.scripts.fund_round_loaders.load_fund_round_from_fab --seed_all_funds True && \
       python -m invoke assessment.seed-local-assessment-store-db && \
       python -m invoke account.seed-local-account-store && \
       python -m debugpy --listen 0.0.0.0:5678 -m wsgi
