--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,8 +43,7 @@ services:
       python -m fund_store.scripts.fund_round_loaders.load_fund_round_from_fab --seed_all_funds True && \
       python -m invoke assessment.seed-local-assessment-store-db && \
       python -m invoke account.seed-local-account-store && \
-      python -m debugpy --listen 0.0.0.0:5678 -m wsgi
-      "
+      flask run --host 0.0.0.0 --port 8080 --debug"
     environment:
       - FLASK_ENV=development
       - DATABASE_URL=postgresql://postgres:password@database:5432/pre_award_stores
@@ -54,7 +53,6 @@ services:
     env_file: .awslocal.env
     ports:
       - 3012:8080
-      - 5692:5678
     depends_on:
       database:
         condition: service_healthy
