--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,11 +112,13 @@ services:
     build:
       context: ./apps/digital-form-builder-adapter
       dockerfile: ./designer/Dockerfile
-    command: yarn designer production
+    command: yarn designer dev
     ports:
       - 3000:3000
+      - 9229:9229
     volumes:
       - './certs:/app-certs'
+      - './apps/digital-form-builder-adapter/designer:/usr/src/app/digital-form-builder-adapter/designer'
     env_file:
       - .env # For the AZURE_AD_* variables
       - .awslocal.env
@@ -148,12 +150,13 @@ services:
     build:
       context: ./apps/digital-form-builder-adapter
       dockerfile: ./runner/Dockerfile
-    command: yarn runner production
+    command: yarn runner dev
     ports:
       - 3009:3009
       - 9228:9228
     volumes:
       - './certs:/app-certs'
+      - './apps/digital-form-builder-adapter/runner:/usr/src/app/digital-form-builder-adapter/runner'
     env_file:
       - .env # For the AZURE_AD_* variables
       - .awslocal.env
