BAU: Remove old DBs & local migration script
We no longer need the account or assessment store DBs as part of the
docker runner setup, as these have all been consolidated into pre-award.

Also removes the one-off local migration script which was used when we
migrated fund-store to pre-award-stores as a way for developers to
persist any funds they had set up locally. This script is now redundant.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -291,7 +291,7 @@ services:
     restart: always
     environment:
       - POSTGRES_PASSWORD=password
-      - POSTGRES_MULTIPLE_DATABASES=assessment_store,account_store,data_store,data_store_test,fab_store,fab_store_test,pre_award_stores,pre_award_stores_test
+      - POSTGRES_MULTIPLE_DATABASES=data_store,data_store_test,fab_store,fab_store_test,pre_award_stores,pre_award_stores_test
     ports:
       - 5432:5432
     healthcheck:
