FS-4942: adding launcher script and docket attach (#122)
* FS-4942: adding launcher script and docket attach

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -50,6 +50,24 @@
             ]
         },
         {
+            "name": "Docker Runner: Form Runner",
+            "type": "node",
+            "request": "attach",
+            "address": "localhost",
+            "port": 9228,
+            "localRoot": "${workspaceFolder}/apps/digital-form-builder-adapter/runner",
+            "remoteRoot": "/usr/src/app/digital-form-builder-adapter/runner"
+        },
+        {
+            "name": "Docker Runner: Form Designer",
+            "type": "node",
+            "request": "attach",
+            "address": "localhost",
+            "port": 9229,
+            "localRoot": "${workspaceFolder}/apps/digital-form-builder-adapter/designer",
+            "remoteRoot": "/usr/src/app/digital-form-builder-adapter/designer"
+        },
+        {
             "name": "Docker Runner: Pre-Award",
             "type": "debugpy",
             "request": "attach",
@@ -63,7 +81,7 @@
                     "remoteRoot": "."
                 }
             ]
-        },
+        }
     ],
     "compounds": [
         {
@@ -72,7 +90,9 @@
                 "Docker Runner: Data Store",
                 "Docker Runner: Fund Application Builder",
                 "Docker Runner: Notification",
-                "Docker Runner: Pre-Award"
+                "Docker Runner: Pre-Award",
+                "Docker Runner: Form Runner",
+                "Docker Runner: Form Designer"
             ],
             "stopAll": true
         }
