--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -117,9 +117,10 @@ services:
     build:
       context: ./apps/digital-form-builder-adapter
       dockerfile: ./designer/Dockerfile
-    command: yarn designer production
+    command: yarn designer dev
     ports:
       - 3000:3000
+      - 9229:9229
     volumes:
       - './certs:/app-certs'
     env_file:
