FAB environment variable example for switching Flask-DebugToolbar on / off

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,7 @@ AZURE_AD_CLIENT_ID=<INSERT-AZURE-AD-CREDS-FROM-DLUHC-FSD-1PASSWORD-IF-USING-AUTH
 AZURE_AD_CLIENT_SECRET=<INSERT-AZURE-AD-CREDS-FROM-DLUHC-FSD-1PASSWORD-IF-USING-AUTHENTICATOR>
 AZURE_AD_TENANT_ID=<INSERT-AZURE-AD-CREDS-FROM-DLUHC-FSD-1PASSWORD-IF-USING-AUTHENTICATOR>
 # <- Shared environment ->
+
+
+# <- FAB environment ->
+DEBUG_TB_ENABLED=true
